Preventing unnecessary horizontal scrollbar

--- a/wsgi/shadowcon/shadowcon/static/css/base.css
+++ b/wsgi/shadowcon/shadowcon/static/css/base.css
@@ -91,26 +91,22 @@ div#head_and_nav {
     background-size:960px 177px;
     background-repeat:no-repeat;
 
-    width:100%;
     height:177px;
     box-sizing:content-box;
 }
 
+header {
+    padding-top:1px;
+}
+
 header h1 {
     font-size:60px;
-    position:relative;
-    margin:0px;
-    top:15px;
-    left:15px;
+    margin: 15px 0px 0px 15px;
 }
 
 header p {
-    position:relative;
-    top:-5px;
-    left:60px;
-    margin:14px 0px 14px 0px;
+    margin:-9px 0px 14px 60px;
 }
-
 
 /* Nav Bar */
 nav {
@@ -268,9 +264,8 @@ footer {
 }
 
 footer a {
-    position:relative;
     top:5px;
-    left:15px;
+    margin-left:15px;
     font-size:12px;
 }
 
@@ -290,4 +285,9 @@ footer a {
 .nav-tabs>li>a {
   color:white !important;
   text-decoration: none;
+}
+
+/* prevent scrollbar */
+.row {
+  margin-right:-8px;
 }
